# yapp

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: codequalitycheck.yml  pylint.yml  python-publish.yml
configuration/: index.html
docs/: configuration.md  index.md  reference.md  roadmap.md
docs/stylesheets/: extra.css
example/: ExamplePipeline.py  pipelines.yml  test.py
example/common/: UselessHook.py
example/simple_task/: Later.py  MainTask.py
example/sligthly_more_complex/: PredictorA.py  PredictorB.py
example_python/: ExamplePipeline.py
example_yaml/: pipelines.yml
examples/: basic_monitor.py  pipelines.yml  pipelines_annotated.yml  test.py
examples/data/: a_csv_file.csv
examples/ray_parallel/: MainTask.py
examples/simple_task/: Later.py
examples/sligthly_more_complex/: test.py
reference/: index.html
roadmap/: index.html
search/: search_index.json
src/yapp/: __init__.py  cli.py
src/yapp/adapters/: __init__.py  file.py  pandas.py  pgsql.py  snowflake.py  sql.py  utils.py
src/yapp/cli/: __init__.py  logs.py  parsing.py  tag_parser.py  validation.py
src/yapp/cli/extra_tags/: env.py  pipe.py
src/yapp/core/: AttrDict.py  InputAdapter.py  Inputs.py  Job.py  OutputAdapter.py  Pipeline.py  __init__.py  attr_dict.py  errors.py  input_adapter.py  inputs.py  job.py  logs.py  monitor.py  output_adapter.py  pipeline.py  utils.py
tests/cli/: test_parser.py  test_piper.py
tests/core/: test_attr_dict.py  test_inputs.py  test_pipeline.py
yapp/: AttrDict.py  Inputs.py  Job.py  Outputs.py  Pipeline.py  __init__.py  cli.py
yapp/adapters/: file.py  pgsql.py  snowflake.py  sql.py  utils.py
yapp/core/: AttrDict.py  Inputs.py  Job.py  OutputAdapter.py  Pipeline.py  __init__.py
