# Many thanks to Mai Nishimura for py-tiny-pkg
# https://github.com/denkiwakame/py-tiny-pkg

[build-system]
# PEP 518 https://www.python.org/dev/peps/pep-0518/
# https://discuss.python.org/t/help-testing-experimental-features-in-setuptools/13821
requires = [
  "setuptools>=61",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=6.4", # for automated versioning
]

# PEP 517 https://peps.python.org/pep-0517/
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "yapp" }

[tool.setuptools.packages.find]
where = ["yapp"]
exclude = ["tests"]
namespaces = true

[tool.setuptools_scm]
write_to = "yapp/_version.py"

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "yapp"
# version = "0.0.1"
# for automated versioning by pypa/setuptools_scm. see https://peps.python.org/pep-0621/#dynamic
dynamic = ["version"]
description = "Yet Another Python (data) Pipeline"
authors = [{ name = "Carlo Antonio Venditti" }, { email = "c.a.venditti@pm.me" }]
maintainers = [{ name = "Carlo Antonio Venditti" }, { email = "c.a.venditti@pm.me" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
keywords = ["package", "setuptools"]
dependencies = ["pandas", "sqlalchemy", "snowflake-connector-python"]

[project.optional-dependencies]
dev = ["pytest==7.1.1", "pytest-cov[all]", "mypy==0.942", "black==22.3.0"]

[project.urls]
Homepage = "https://github.com/cavenditti/yapp"
documentation = "https://github.com/cavenditti/yapp"
repository = "https://github.com/cavenditti/yapp"
changelog = "https://github.com/cavenditti/yapp/blob/master/CHANGELOG.md"

[project.scripts]
yapp = "cli:main"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
