[metadata]
name = yapp
version = 0.0.1
author = Carlo Antonio Venditti
author_email = author@example.com
description = Yet Another Python (data) Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cavenditti/yapp
project_urls =
    Bug Tracker = https://github.com/cavenditti/yapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = yapp
install_requires =
	pyyaml
	pandas
	sqlalchemy
	psycopg2
	snowflake-connector-python

[options.entry_points]
console_scripts =
    yapp = yapp.cli:main

[flake8]
max-line-length = 120
