[metadata]
name = yapp-pipelines
version = file:src/yapp/_version.py
author = Carlo Antonio Venditti
author_email = author@example.com
description = Yet Another Python (data) Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cavenditti/yapp
project_urls =
    Bug Tracker = https://github.com/cavenditti/yapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
	pyyaml
	cerberus
	pandas
	psycopg2
	snowflake-connector-python

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yapp = yapp.cli:main

[flake8]
max-line-length = 120
